--- a/packages/codegen/src/templates/controller.hbs
+++ b/packages/codegen/src/templates/controller.hbs
@@ -1,9 +1,10 @@
-import { Controller, Get, Post, Put, Delete, Param } from '@nestjs/common';
+import { Controller, Get, Post, Put, Delete, Param, UseInterceptors } from '@nestjs/common';
 import { TID } from 'server/common/types';
 import { IGetParams } from 'server/common/interfaces';
 import { IController } from 'server/common/IController';
-import { {{interfaceName}} } from './{{filePrefixDTO}}.dto';
-import { {{serviceName}} } from './{{service}}.service';
+import { {{interfaceName}} } from 'server/{{router}}/{{filePrefixDTO}}.dto';
+import { {{serviceName}} } from 'server/{{router}}/{{service}}.service';
+import { NotFoundInterceptor } from 'server/interceptors/NotFoundInterceptor';
 
 @Controller('{{router}}')
 export class {{controllerName}} implements IController<{{interfaceName}}> {
@@ -25,6 +26,7 @@ export class {{controllerName}} implements IController<{{interfaceName}}> {
   }
 
   @Get(':id')
+  @UseInterceptors(NotFoundInterceptor)
   async getItem(@Param() params: IGetParams): Promise<{{interfaceName}}> {
     return await this.service.getItem(params.id);
   }
