--- a/packages/codegen/src/templates/service.hbs
+++ b/packages/codegen/src/templates/service.hbs
@@ -35,13 +35,13 @@ export class {{serviceName}} extends BaseService<{{interfaceName}}> {
     throw new Error('Method not implemented.');
   }
   async getItem(id: TID): Promise<{{interfaceName}}> {
-    return await this.query(`
+    return (await this.query(`
       SELECT
         {{#each fields}}
         \`{{field}}\`{{separator}}
         {{/each}} 
       FROM {{tableName}}
-      WHERE id = ${id}`);
+      WHERE id = ${id}`))[0];
   }
   putItem(id: TID): {{interfaceName}} {
     throw new Error('Method not implemented.');
