--- a/packages/codegen/src/templates/controller.hbs
+++ b/packages/codegen/src/templates/controller.hbs
@@ -11,6 +11,7 @@ export class {{controllerName}} implements IController<{{interfaceName}}> {
   constructor(private readonly service: {{serviceName}}) {}
 
   @Get()
+  @UseInterceptors(NotFoundInterceptor)
   async getAll(): Promise<{{interfaceName}}[]> {
     return this.service.getAll();
   }
