--- a/packages/codegen/src/templates/controller.hbs
+++ b/packages/codegen/src/templates/controller.hbs
@@ -3,7 +3,7 @@ import { TID } from 'server/common/types';
 import { IGetParams } from 'server/common/interfaces';
 import { IController } from 'server/common/IController';
 import { {{interfaceName}} } from '@mapbul-pub/types';
-import { {{serviceName}} } from 'server/{{router}}/{{service}}.service';
+import { {{serviceName}} } from 'server/{{routerPath}}/{{service}}.service';
 import { NotFoundInterceptor } from 'server/interceptors/NotFoundInterceptor';
 
 @Controller('{{router}}')
