--- a/packages/codegen/src/templates/service.hbs
+++ b/packages/codegen/src/templates/service.hbs
@@ -28,12 +28,15 @@ export class {{serviceName}} extends BaseService<{{interfaceName}}> {
   postItem(item: {{interfaceName}}): {{interfaceName}} {
     throw new Error('Method not implemented.');
   }
+
   putAll(item: {{interfaceName}}): {{interfaceName}} {
     throw new Error('Method not implemented.');
   }
+
   deleteAll(): void {
     throw new Error('Method not implemented.');
   }
+
   async getItem(id: TID): Promise<{{interfaceName}}> {
     return (await this.query(`
       SELECT
@@ -41,11 +44,13 @@ export class {{serviceName}} extends BaseService<{{interfaceName}}> {
         \`{{field}}\`{{separator}}
         {{/each}} 
       FROM {{tableName}}
-      WHERE id = ${id}`))[0];
+      WHERE id = ${id}`))[0]; ∂ ∂
   }
+
   putItem(id: TID): {{interfaceName}} {
     throw new Error('Method not implemented.');
   }
+
   deleteItem(id: TID): {{interfaceName}} {
     throw new Error('Method not implemented.');
   }
