--- a/packages/codegen/src/templates/service.hbs
+++ b/packages/codegen/src/templates/service.hbs
@@ -33,7 +33,7 @@ export class {{serviceName}} extends BaseService<{{interfaceName}}> {
 
     return {
       data: isPagenation ? records[0] : records,
-      totalPages: isPagenation ? Number(Math.ceil(records[1][0]['count(*)'] / query.limit)) : 1,
+      totalPages: isPagenation ? Number(Math.ceil(records[1][0]['count(*)'] / query.size)) : 1,
     };
   }
 
