--- a/packages/codegen/src/templates/service.hbs
+++ b/packages/codegen/src/templates/service.hbs
@@ -32,7 +32,7 @@ export class {{serviceName}} extends BaseService<{{interfaceName}}> {
       FROM {{tableName}} ${additional}`);
 
     return {
-      data: isPagenation ? records[0] : records,
+      content: isPagenation ? records[0] : records,
       totalPages: isPagenation ? Number(Math.ceil(records[1][0]['count(*)'] / query.size)) : 1,
     };
   }
