--- a/packages/codegen/src/templates/controller.hbs
+++ b/packages/codegen/src/templates/controller.hbs
@@ -2,7 +2,7 @@ import { Controller, Get, Post, Put, Delete, Param, UseInterceptors, Query } fro
 import { TID } from 'server/common/types';
 import { IGetParams } from 'server/common/interfaces';
 import { IController } from 'server/common/IController';
-import { Pagination, {{interfaceName}} } from '@mapbul-pub/types';
+import { PageContent, {{interfaceName}} } from '@mapbul-pub/types';
 import { {{serviceName}} } from 'server/{{routerPath}}/{{service}}.service';
 import { NotFoundInterceptor } from 'server/interceptors/NotFoundInterceptor';
 import { GetAllQueryDTO } from 'server/common/QueryDTO';
@@ -13,7 +13,7 @@ export class {{controllerName}} implements IController<{{interfaceName}}> {
 
   @Get()
   @UseInterceptors(NotFoundInterceptor)
-  async getAll(@Query() query: GetAllQueryDTO): Promise<Pagination<{{interfaceName}}>> {
+  async getAll(@Query() query: GetAllQueryDTO): Promise<PageContent<{{interfaceName}}>> {
     return this.service.getAll(query);
   }
 
