--- a/packages/codegen/src/templates/service.hbs
+++ b/packages/codegen/src/templates/service.hbs
@@ -4,7 +4,7 @@ import { BaseService } from 'server/common/BaseService';
 import { Connection } from 'mysql';
 import { TID } from 'server/common/types';
 import { GlobalVar } from '@mapbul-pub/common';
-import { Pagination, {{interfaceName}} } from '@mapbul-pub/types';
+import { PageContent, {{interfaceName}} } from '@mapbul-pub/types';
 import { GetAllQueryDTO } from 'server/common/QueryDTO';
 
 export class {{serviceName}} extends BaseService<{{interfaceName}}> {
@@ -17,7 +17,7 @@ export class {{serviceName}} extends BaseService<{{interfaceName}}> {
   connection: Connection;
   query: (expression: string) => Promise<any>;
 
-  async getAll(query: GetAllQueryDTO): Promise<Pagination<{{interfaceName}}>> {
+  async getAll(query: GetAllQueryDTO): Promise<PageContent<{{interfaceName}}>> {
     let additional = '';
     const isPagination = query.page && query.size;
     if (isPagination) {
