--- a/packages/codegen/src/templates/service.hbs
+++ b/packages/codegen/src/templates/service.hbs
@@ -1,21 +1,16 @@
-import * as mysql from 'mysql';
-import * as util from 'util';
 import { BaseService } from 'server/common/BaseService';
-import { Connection } from 'mysql';
 import { TID } from 'server/common/types';
-import { GlobalVar } from '@mapbul-pub/common';
+import { dbConnectionSingleton, DbConnection } from '@mapbul-pub/common';
 import { PageContent, {{interfaceName}} } from '@mapbul-pub/types';
 import { GetAllQueryDTO } from 'server/common/QueryDTO';
 
 export class {{serviceName}} extends BaseService<{{interfaceName}}> {
   constructor() {
     super();
-    this.connection = mysql.createConnection({ ...GlobalVar.env.dbConnection, multipleStatements: true });
-    this.query = util.promisify(this.connection.query).bind(this.connection);
+    this.connection = dbConnectionSingleton.getInstance();
   }
 
-  connection: Connection;
-  query: (expression: string) => Promise<any>;
+  private connection: DbConnection;
 
   async getAll(query: GetAllQueryDTO): Promise<PageContent<{{interfaceName}}>> {
     let additional = '';
@@ -24,7 +19,7 @@ export class {{serviceName}} extends BaseService<{{interfaceName}}> {
       const offset = (query.page - 1) * query.size;
       additional = `limit ${offset},${query.size}; SELECT count(*) FROM {{tableName}}`;
     }
-    const records = await this.query(`
+    const records = await this.connection.query(`
       SELECT
         {{#each fields}}
         \`{{field}}\`{{separator}}
@@ -50,7 +45,7 @@ export class {{serviceName}} extends BaseService<{{interfaceName}}> {
   }
 
   async getItem(id: TID): Promise<{{interfaceName}}> {
-    return (await this.query(`
+    return (await this.connection.query(`
       SELECT
         {{#each fields}}
         \`{{field}}\`{{separator}}
