--- a/packages/codegen/src/templates/service.hbs
+++ b/packages/codegen/src/templates/service.hbs
@@ -12,11 +12,15 @@ export class {{serviceName}} implements BaseService<{{interfaceName}}> {
   private connection: IDbConnection;
 
   async getAll(query: GetAllQueryDTO): Promise<PageContent<{{interfaceName}}>> {
-    let additional = '';
+    let filter = '';
+    if ('filter' in query) {
+      filter += `WHERE ${query['filter']}`;
+    }
+    let additional = filter;
     const isPagination = query.page && query.size;
     if (isPagination) {
       const offset = (query.page - 1) * query.size;
-      additional = `limit ${offset},${query.size}; SELECT count(*) FROM {{tableName}}`;
+      additional += ` LIMIT ${offset},${query.size}; SELECT count(*) FROM {{tableName}} ${filter}`;
     }
     const records = await this.connection.query(`
       SELECT
