--- a/packages/codegen/src/templates/service.hbs
+++ b/packages/codegen/src/templates/service.hbs
@@ -23,7 +23,7 @@ export class {{serviceName}} implements BaseService<{{interfaceName}}> {
     const isPagination = query.page && query.size;
     if (isPagination) {
       const offset = (query.page - 1) * query.size;
-      additional += ` LIMIT ${offset},${query.size}; SELECT count(*) FROM category ${filter}`;
+      additional += ` LIMIT ${offset},${query.size}; SELECT count(*) FROM {{tableName}} ${filter}`;
     }
     const records = await this.connection.query(`
       SELECT
