--- a/packages/codegen/src/templates/dto.hbs
+++ b/packages/codegen/src/templates/dto.hbs
@@ -1,5 +1,5 @@
 export interface {{interfaceName}} {
   {{#each fields}}
-  {{field}}: {{type}};
+  {{field}}: {{type}}{{#if nullable}} | null{{/if}};
   {{/each}}
 }
