--- a/packages/codegen/src/templates/service.hbs
+++ b/packages/codegen/src/templates/service.hbs
@@ -21,7 +21,7 @@ export class {{serviceName}} implements BaseService<{{interfaceName}}> {
     }
     let additional = `${filter} ${sort}`;
     const isPagination = query.page && query.size;
-    if (isPagination) {
+    if (isPagination && query.page && query.size) {
       const offset = (query.page - 1) * query.size;
       additional += ` LIMIT ${offset},${query.size}; SELECT count(*) FROM {{tableName}} ${filter}`;
     }
@@ -34,7 +34,7 @@ export class {{serviceName}} implements BaseService<{{interfaceName}}> {
 
     return {
       content: isPagination ? records[0] : records,
-      totalPages: isPagination ? Number(Math.ceil(records[1][0]['count(*)'] / query.size)) : 1,
+      totalPages: isPagination ? Number(Math.ceil(records[1][0]['count(*)'] / (query?.size || 1))) : 1,
     };
   }
 
