--- a/packages/codegen/src/templates/service.hbs
+++ b/packages/codegen/src/templates/service.hbs
@@ -32,7 +32,7 @@ export class {{serviceName}} implements BaseService<{{interfaceName}}> {
         {{/each}} 
       FROM {{tableName}} ${additional}`);
 
-    const totalElements = Number(records[1][0]['count(*)']);
+    const totalElements = isPagination ? Number(records[1][0]['count(*)']) : records.length;
 
     return {
       content: isPagination ? records[0] : records,
