--- a/packages/codegen/src/templates/service.hbs
+++ b/packages/codegen/src/templates/service.hbs
@@ -15,6 +15,10 @@ export class {{serviceName}} implements BaseService<{{interfaceName}}> {
     if (query.filter) {
       filter += `WHERE ${query.filter}`;
     }
+    if (query.id) {
+      if (!Array.isArray(query.id)) filter += `WHERE id in (${query.id})`;
+      else filter += `WHERE id in (${query.id.join(',')})`;
+    }
     let sort = '';
     if (query.sort) {
       sort += `ORDER BY ${query.sort}`;
