--- a/packages/codegen/src/templates/controller.hbs
+++ b/packages/codegen/src/templates/controller.hbs
@@ -2,6 +2,7 @@ import { Controller, Get, Param, UseInterceptors, Query, Put, Body, Post, Delete
 import { IController, IGetParams } from 'interfaces';
 import { PageContent, {{interfaceName}}, IGetAllQuery } from '@mapbul-pub/types';
 import { {{serviceName}} } from './{{service}}.service';
+import { {{className}} } from './{{service}}.dto';
 import { NotFoundInterceptor } from 'interceptors';
 import { JwtAuthGuard } from '../auth';
 
@@ -18,7 +19,7 @@ export class {{controllerName}} implements IController<{{interfaceName}}> {
   @Post()
   @UseGuards(JwtAuthGuard)
   @UseInterceptors(NotFoundInterceptor)
-  async postItem(@Body() body: {{interfaceName}}): Promise<{{interfaceName}}> {
+  async postItem(@Body() body: {{className}}): Promise<{{interfaceName}}> {
     return await this.service.postItem(body);
   }
 
@@ -31,7 +32,7 @@ export class {{controllerName}} implements IController<{{interfaceName}}> {
   @Put(':id')
   @UseGuards(JwtAuthGuard)
   @UseInterceptors(NotFoundInterceptor)
-  async putItem(@Param('id') id: string, @Body() body: {{interfaceName}}): Promise<{{interfaceName}}> {
+  async putItem(@Param('id') id: string, @Body() body: {{className}}): Promise<{{interfaceName}}> {
     return await this.service.putItem(id, body);
   }
 
